# manov

./: .gitignore  AGENTS.md  CNAME  Justfile  README.md  SEO_SETUP.md  connect.php  header.php  index.php  login.php  package-lock.json  package.json  register.php  style.php  tailwind.config.js
manov-backend/: .dockerignore  .env.example  .eslintrc.js  .gitignore  .prettierrc.js  AGENTS.md  Dockerfile  alembic.ini  create_admin.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  raw_data_sample.json
manov-backend/alembic/: env.py
manov-backend/alembic/versions/: 12aba248c961_add_api_key_and_admin_audit_log_tables.py  1e3b78a2ff70_add_ondelete_cascade_to_novelgenrelink.py  2e33de3888f6_add_reading_line_columns_to_history.py  5eb90ae43e02_add_features_search_comments_reviews_.py  fc800da5045b_initial_migration.py
manov-backend/app/: batch_processor.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
manov-backend/app/middleware/: rate_limit.py
manov-backend/app/routers/: admin.py  admin_api_keys.py  auth.py  genres.py  novels.py  sitemap.py  social.py  user.py
manov-backend/app/services/: processor.py  scraper.py  scraper_crawler.py  translator.py
manov-backend/app/utils/: audit.py  deps.py  security.py  slug.py
manov-backend/prisma/: schema.prisma
manov-backend/src/: app.js
manov-backend/src/config/: passportConfig.js  swaggerConfig.js
manov-backend/src/controllers/: adminController.js  authController.js  authorController.js  chapterController.js  commentController.js  languageController.js  novelController.js  ratingController.js  readingProgressController.js  searchController.js  userController.js  userFavoriteController.js
manov-backend/tests/: conftest.py  test_admin.py  test_auth.py  test_novels.py  test_social.py  test_user.py
src/: App.js  (+1 more)
(+233 files in other folders)
